--- a/style.css
+++ b/style.css
@@ -60,6 +60,22 @@ p {
     margin: 0 10px;
 }
 
+/* Media Query for Mobile Devices */
+@media only screen and (max-width: 600px) {
+    .logo {
+        font-size: 2.5em;
+    }
+
+    .engaging-text {
+        font-size: 1em;
+        padding: 15px;
+    }
+
+    .status {
+        font-size: 1.2em;
+        padding: 8px 15px;
+    }
+}
 .social-icon img {
     width: 30px;
     height: 30px;
